--- a/app.json
+++ b/app.json
@@ -117,6 +117,11 @@
     },
     {
       "url": "heroku/python"
-    }
+    },
+    {
+        "engines": {
+          "node": "15.x"
+        }
+      }
   ]
 }
